--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha",
     "dev": "node server.js",
-    "build": "node build"
+    "build": "next build"
   },
   "author": "",
   "license": "ISC",
