--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "dev": "node server.js",
-    "build": "next build"
+    "dev": "node server.js"
+   
   },
   "author": "",
   "license": "ISC",
